# kuka-lpvds-tasks

./: .gitignore  CMakeLists.txt  README.md  package.xml  task_poses.txt
config/: brandTask.yml  brandTask_x0.yml  shelfTask.yml  shelfTask_video_1.yml  shelfTask_video_2.yml  sinkTask.yml  writingTask-AngleShape.yml  writingTask-CShape.yml  writingTask-KhameshShape.yml  writingTask.yml
include/planning/simple_actions/: linear_cart_action.h
include/tasks/: shelfTaskMotionPlanner.h  sinkTaskMotionPlanner.h  tableTaskMotionPlanner.h  writingTaskMotionPlanner.h
launch/: planning_console.launch  real.launch
launch/planning/: planning_client.launch  planning_console.launch  planning_server.launch  sim.launch
launch/tasks/: run_branding_task.launch  run_inspection_task.launch  run_shelf_task.launch  run_writing_task.launch
src/planning/: client_action_node.cpp  client_console_node.cpp  server_action_node.cpp
src/planning/simple_actions/: linear_cart_action.cpp
src/tasks/: shelfTask_motionPlanner_node.cpp  sinkTask_motionPlanner_node.cpp  tableTask_motionPlanner_node.cpp  viapointTask_motionPlanner_node.cpp  writingTask_motionPlanner_node.cpp
src/tasks/motion_planners/: shelfTaskMotionPlanner.cpp  sinkTaskMotionPlanner.cpp  tableTaskMotionPlanner.cpp  writingTaskMotionPlanner.cpp  writingTaskMotionPlanner.cpp.autosave
