<?xml version="1.0"?>
<package>
  <name>kuka_lpvds_compliant</name>
  <version>0.0.0</version>
  <description>The kuka-lpvds-compliant package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nbfigueroa@todo.todo">nbfigueroa</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>   lwr_ros_client   </build_depend>
  <run_depend>     lwr_ros_client   </run_depend>

  <build_depend>    tf                  </build_depend>
  <run_depend>      tf                  </run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
